# fileDemo

./: CMakeLists.txt  readme.txt
docker/: build_image.sh  docker-compose.yml
docker/ubuntu22.04/: Dockerfile
ps/: 13100000001181000223_sign.cer
sdk/: CMakeLists.txt  globalvar.h
sdk/3rdpart/gmssl/include/openssl/: skf.h
sdk/inc/: core_api.h  globalvar.h  tri_gmssl.h  tri_nal.h  tri_skf_api.h  tri_util.h  type_def.h
sdk/src/: core_api.cpp  globalvar.cpp  tri_gmssl.cpp  tri_nal.cpp  tri_skf_api.cpp  tri_util.cpp
test/: 13100000001181000223_sign.cer  CMakeLists.txt
test/inc/: TriPsReader.h
test/src/: TriPsReader.cpp  test.cpp
